chore: address code-analysis problems
Signed-off-by: Patrick Gell <patgit023@gmail.com>